Bug 325753 - Chokoq displays HTML tags in Gnome 3.10 notification
Summary: Chokoq displays HTML tags in Gnome 3.10 notification
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Mehrdad Momeny
URL: http://i.imgur.com/EaHY30e.png
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-07 23:22 UTC by Fernando Muñoz
Modified: 2022-06-19 15:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Muñoz 2013-10-07 23:22:14 UTC
Chokoq displays HTML tags in Gnome 3.10 notification



Reproducible: Always

Steps to Reproduce:
1. Receive notifications on GNOME 3.10 desktop

Actual Results:  
2. Notification contains HTML <br> tags


Expected Results:  
2. Notification should not contain any HTML tag
Comment 1 Andrea Scarpino 2014-12-20 11:05:56 UTC
Notifications can contains HTML tags: https://developer.gnome.org/notification-spec/#markup

Now we should understand why it's not working...
Comment 2 Justin Zobel 2021-03-09 01:26:45 UTC
Thank you for the bug report.

As this report hasn't seen any changes in 5 years or more, we ask if you can please confirm that the issue still persists.

If this bug is no longer persisting or relevant please change the status to resolved.
Comment 3 Bug Janitor Service 2022-06-19 15:33:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/choqok/-/merge_requests/14
Comment 4 Frédéric Brière 2022-06-19 15:45:00 UTC
(In reply to Andrea Scarpino from comment #1)
> Notifications can contains HTML tags:
> https://developer.gnome.org/notification-spec/#markup

Notifications can contain *some* HTML tags:
https://specifications.freedesktop.org/notification-spec/latest/ar01s04.html

> Now we should understand why it's not working...

Because `<br>` is not included in that list, that's all.  ☺

(For the record, Xfce and MATE also choke on this.)
Comment 5 Frédéric Brière 2022-06-19 15:57:07 UTC
Git commit 83438f2227f3598e04fb51df8b598d21a09fe446 by Frédéric Brière.
Committed on 19/06/2022 at 12:23.
Pushed by alex into branch 'master'.

Replace `<br>` with actual newline in notification message

While the Desktop Notifications Specification¹ does allow the body text
to contain markup using a few HTML-based tags, `<br>` is not included in
that list.  As the specification clearly states: "notifications should
never take advantage of tags that are not listed above".

 ¹ https://specifications.freedesktop.org/notification-spec/latest/index.html

M  +1    -1    libchoqok/notifymanager.cpp

https://invent.kde.org/network/choqok/commit/83438f2227f3598e04fb51df8b598d21a09fe446