Replace `<br>` with actual newline in notification message

While the Desktop Notifications Specification¹ does allow the body text
to contain markup using a few HTML-based tags, `<br>` is not included in
that list.  As the specification clearly states: "notifications should
never take advantage of tags that are not listed above".

 ¹ https://specifications.freedesktop.org/notification-spec/latest/index.html

BUG: 325753